Well the backend seems to work. Honeslty wasn't that much work. Gonna tweak it more