@@ -1,8 +1,5 @@
 package com.jamey.javaesque_compiler.compiler.Main;
 
-import java.io.File;
-import java.io.IOException;
-import java.nio.file.Files;
 import java.util.ArrayList;
 
 import com.jamey.javaesque_compiler.compiler.Lexer.TokenizerException;
@@ -17,28 +14,28 @@ import com.jamey.javaesque_compiler.compiler.Typechecker.TypecheckerErrorExcepti
 import com.jamey.javaesque_compiler.compiler.Typechecker.Typechecker;
 
 public class JavaEsque {
-    public static void usage(){
-        System.out.println("Takes:");
-        System.out.println("-Input JavaEsque file");
-        System.out.println("-Output JavaScript file");
-    }
-    public static String readFileToString(final String fileName) throws IOException{
-        return Files.readString(new File(fileName).toPath());
+    // public static void usage(){
+    //     System.out.println("Takes:");
+    //     System.out.println("-Input JavaEsque file");
+    //     System.out.println("-Output JavaScript file");
+    // }
+    // public static String readFileToString(final String fileName) throws IOException{
+    //     return Files.readString(new File(fileName).toPath());
         
-    }
-    public static void runCompiler(String[] args) throws TokenizerException,
+    // }
+    public String runCompiler(String program) throws TokenizerException,
                                         ParserException, 
                                         TypecheckerErrorException, 
-                                        CodeGenException, 
-                                        IOException{
-        if(args.length != 2){
-            usage();
-        }else{
-            final String input = readFileToString(args[0]);
-            final ArrayList<Token> tokens = new Tokenizer(input).tokenize();
-            final Program program = new Parser(tokens).parseWholeProgram();
-            Typechecker.typecheckProgram(program);
-            CodeGen.writeProgram(program, new File(args[1]));
-        }
+                                        CodeGenException{
+        // if(args.length != 2){
+        //     usage();
+        // }else{
+        final ArrayList<Token> tokens = new Tokenizer(program).tokenize();
+        final Program parsedProgram = new Parser(tokens).parseWholeProgram();
+        Typechecker.typecheckProgram(parsedProgram);
+
+        final String jsOutput = new CodeGen().writeProgram(parsedProgram);
+        //compile javascript
+        return jsOutput;
     }
 }
